# internal/entity/order.go
@@ -1,6 +1,7 @@
 package entity
 
 import (
+	"encoding/json"
 	"time"
 )
 
@@ -14,10 +15,23 @@ const (
 )
 
 type Order struct {
-	ID          uint64
-	UserID      uint64
-	OrderNumber string
-	Status      OrderStatus
-	Accrual     float64
-	UploadedAt  time.Time
+	ID          uint64      `json:"-"`
+	UserID      uint64      `json:"-"`
+	OrderNumber string      `json:"number"`
+	Status      OrderStatus `json:"status"`
+	Accrual     float64     `json:"accrual,omitempty"`
+	UploadedAt  time.Time   `json:"uploaded_at"`
+}
+
+func (o Order) MarshalJSON() ([]byte, error) {
+	type Alias Order
+	alias := struct {
+		*Alias
+		UploadedAt string `json:"uploaded_at"`
+	}{
+		Alias:      (*Alias)(&o),
+		UploadedAt: o.UploadedAt.Local().Format(time.RFC3339),
+	}
+
+	return json.Marshal(alias)
 }
